@@ -125,8 +125,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.9.4-alpha08
-@set doc-edition 4.9.4-alpha08
+@set nco-edition 4.9.4-alpha09
+@set doc-edition 4.9.4-alpha09
 @set copyright-years 1995--2020
 @set update-year 2020
 @set update-date 22 July 2020
